[改版-接案] 依google表單內容修改

--- a/en/herlady.html
+++ b/en/herlady.html
@@ -292,16 +292,16 @@
 
                         <h5 class="herlady-product">Hergeia-pH Kit for Vaginal Discharge</h5>
                         <p>The most understanding friend about your private part</p>
-                        <h3 class="herlady-price">Price：NT$ 500<br><br></h3>
+                        <h3 class="herlady-price">Price：NT$ 400<br><br></h3>
 
                     </div>
 
                 </div>
                 <div class="col-md-6 col-sm-6 row-herlady">
-                    <!--<div class="div-inline btn-default-herlady-disable">In Development</div>
-                    <div class="div-inline btn-feature-herlady"><a href="" class="btn-default-herlady" target="_blank">蝦皮商城</a></div>
-                    <div class="div-inline btn-feature-herlady"><a href="" class="btn-default-herlady" target="_blank">Line Store</a></div>
-                </div>-->
+                    <div class="col-md-6 col-sm-6 row-herlady">
+                    <div class="div-inline btn-feature-herlady"><a href="http://www.pcstore.com.tw/petgeia26311/M46318461.htm" class="btn-default-herlady" target="_blank">PC Home</a></div>
+                    <div class="div-inline btn-default-herlady-disable">Shopee</div>
+                </div>
 
                 </div>
 
@@ -480,7 +480,7 @@
                         <ul class="accordionPart">
                             <li>
                                 <div class="qa_title"><i class="fa fa-angle-right"></i> How to store ?</div>
-                                <div class="qa_content">Store in a dry place between 2 to 35 oC and avoid direct sunlight. Do not freeze. If followed properly, the kit is accurate within the expiration date.
+                                <div class="qa_content">Store in a dry place between 2 to 35&deg;C and avoid direct sunlight. Do not freeze. If followed properly, the kit is accurate within the expiration date.
                                 </div>
                             </li>
                         </ul>
