--- a/zh/herlady.html
+++ b/zh/herlady.html
@@ -71,7 +71,6 @@
                             快速了解私密處健康狀況的好姊妹<br><br>
                         </h1>
                         <div class="head-btn wow fadeInLeft">
-
                             <a href="#video" class="btn-primary-herlady play-market">
                                 <i class="fa fa-arrow-down" aria-hidden="true"></i>
                             </a>
@@ -292,17 +291,14 @@
 
                         <h5 class="herlady-product">Hergeia賀小姐-陰道分泌物pH值檢驗棒</h5>
                         <p>快速了解私密處健康狀況的好姊妹</p>
-                        <h3 class="herlady-price">定價 NT$ 500<br><br></h3>
+                        <h3 class="herlady-price">定價 NT$ 400<br><br></h3>
                     </div>
                 </div>
                 <div class="col-md-6 col-sm-6 row-herlady">
-                    <!--<div class="div-inline btn-default-herlady-disable">產品測試中</div>
-                    <div class="div-inline btn-feature-herlady"><a href="" class="btn-default-herlady" target="_blank">蝦皮商城</a></div>
-                    <div class="div-inline btn-feature-herlady"><a href="" class="btn-default-herlady" target="_blank">Line Store</a></div>
-                </div>-->
-
+                    <div class="div-inline btn-feature-herlady"><a href="http://www.pcstore.com.tw/petgeia26311/M46318461.htm" class="btn-default-herlady" target="_blank">PC Home</a></div>
+                    <div class="div-inline btn-default-herlady-disable">蝦皮購物</div>
                 </div>
-            </div>
+                </div>
         </div>
     </section>
     <!-- hergeia使用者評論 -->
@@ -377,7 +373,7 @@
                                     <i class="fa fa-quote-right fa-2x" aria-hidden="true"></i>
                                 </div>
                                 <!-- Clients content -->
-                                <p class="message text-center">花瓣的擋板設計確實讓我安心不少，不然都不知道要多深入才夠！<br><br>
+                                <p class="message text-center">花瓣的檔板設計確實讓我安心不少，不然都不知道要多深入才夠！<br><br>
                                 </p>
                             </div>
 
@@ -401,7 +397,7 @@
                     <div class="skill-home-solid clearfix">
                         <div class="col-md-4 text-center">
                             <div class="box-area-notice">
-                                <p class="notice-label">不適合使用本產品之女性：<br> 1. 對顏色判讀有困難者<br> 2. 未有性行為者<br> 3. 已使用陰道塞劑者<br> 4. 使用陰道置入之雌性激素藥物者<br> 5. 月經期間或陰道出血者</p>
+                                <p class="notice-label">不適合使用本產品之女性：<br> 1. 對顏色判讀有困難者<br> 2. 未有性經驗者<br> 3. 已使用陰道塞劑者<br> 4. 使用陰道置入之雌性激素藥物者<br> 5. 月經期間或陰道出血者</p>
 
                             </div>
                         </div>
@@ -456,7 +452,7 @@
                         <ul class="accordionPart">
                             <li>
                                 <div class="qa_title"><i class="fa fa-angle-right"></i> 賀小姐pH值檢驗棒的檢測原理為何？</div>
-                                <div class="qa_content">本檢驗棒由酸鹼(pH)試片和具生物相容性的塑膠組裝而成。將檢驗棒製入陰道，並使試片充分浸入分泌物後，便能藉由分泌物和試紙反應而呈現出不同顏色。由不同酸鹼值所顯示出來的顏色可用於區別陰道感染的可能原因：白色念珠菌、細菌或滴蟲引起之陰道感染。
+                                <div class="qa_content">本檢驗棒由酸鹼(pH)試片和具生物相容性的塑膠組裝而成。將檢驗棒置入陰道，並使試片充分浸入分泌物後，便能藉由分泌物和試紙反應而呈現出不同顏色。由不同酸鹼值所顯示出來的顏色可用於區別陰道感染的可能原因：白色念珠菌、細菌或滴蟲引起之陰道感染。
                                 </div>
                             </li>
                         </ul>
@@ -476,7 +472,7 @@
                         <ul class="accordionPart">
                             <li>
                                 <div class="qa_title"><i class="fa fa-angle-right"></i> 產品該如何保存？</div>
-                                <div class="qa_content">請將檢驗棒保存於2-35度C之環境，請維持乾燥並避免陽光或熱源直射、請勿冷凍保存。若能依指示保存及使用，試片將可精準至包裝上的保存期限。
+                                <div class="qa_content">請將檢驗棒保存於2-35&deg;C之環境，請維持乾燥並避免陽光或熱源直射、請勿冷凍保存。若能依指示保存及使用，試片將可精準至包裝上的保存期限。
                                 </div>
                             </li>
                         </ul>
