--- a/zh/index.html
+++ b/zh/index.html
@@ -165,7 +165,7 @@
                     <div class="col-md-7 wow fadeInLeft">
                         <div>
                             <h2 class="her-goods-title"><br>Hergeia賀小姐-陰道分泌物pH值檢驗棒</h2>
-                            <p class="her-goods-content">(衛部醫器製壹字第006714)<br>陰道炎的不適感，賀小姐最了解！<br><br>特殊專利檔板設計，讓您在檢測過程中能感到舒適安心<br>前端雙層凹槽設計，替您解決試劑接觸肌膚的困擾<br><br>您再也不需要因為內診，感到緊張害羞<br>只要簡單五步驟，約一分鐘就能快速得知結果
+                            <p class="her-goods-content">(衛部醫器製壹字第006714號)<br>陰道炎的不適感，賀小姐最了解！<br><br>特殊專利檔板設計，讓您在檢測過程中能感到舒適安心<br>前端雙層凹槽設計，替您解決試劑接觸肌膚的困擾<br><br>您再也不需要因為內診，感到緊張害羞<br>只要簡單五步驟，約一分鐘就能快速得知結果
                             </p>
                             <div class="btn-section-her"><a href="herlady.html" class="btn-default-her">了解更多</a></div>
                         </div>
